--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
     color: white;
     font-size: 1.3em;
     font-weight: 400;
-    background-color: rgb(22, 22, 22);
+    background-color: rgb(0, 0, 0);
     padding: 10px 40px;
     border: 2px solid white;
     border-radius: 25px;
@@ -58,18 +58,31 @@ body {
     main h1, main h2 {
         text-shadow: #343538 0.05em 0.05em 0.05em;
     }
+    .h1 {
+        position: static;
+        margin-bottom: 10px;
+        height: 90px;
+        width: 300px;
+    }
+    .h2{
+        position: static;
+        margin-bottom: 100px;
+        height: 90px;
+        width: 300px;
+    }
+
 
 /* Cabeçalho */
 header {
     justify-content: space-between;
-    background-color: #343538;
+    background-color: #000000;
     height: 60px;
 }
 #logo img {
     margin-top: 10px;
     margin-left: 10px;
-    width: 200px;
-    height: 200px;
+    width: 100px;
+    height: 100px;
 }
 #check {
     display: none;
@@ -106,7 +119,7 @@ nav ul li a {
 /* Destaque */
 main {
     height: 75vh;
-    background: url(img/fundo.jpeg);
+    background: url(img/fundo.jpg);
     background-attachment: fixed;
     background-size: cover;
     color: white;
@@ -125,31 +138,57 @@ main h2 {
 /* Sobre */
 
 #Sobre {
-    background-color: rgba(255, 255, 255, 0.315);
+    background-image: url(img/background.png);
+    background-color: #444444;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     padding: 30px 0px;
     text-align: center;
     justify-content: center;
 }
+.destaqueSobre {
+    color: white;
+    text-shadow: 1px 1px 3px black;
+}
+.textoSobre {
+    background-color: rgba(51, 51, 51, 0.7);
+    border-radius: 35px;
+    box-shadow: 1px 1px 3px #000000;
+    text-shadow: 1px 1px 3px #000000;
+    color: white;
+    padding: 10px 10px 10px 10px;
+    text-align: center;
+    justify-content: center;
+}
+.Trio {
+    margin-top: 30px;
+    height: 150px;
+    width: 150px;
+    border-radius: 50px;
+    box-shadow: 1px 1px 3px #000000;
+}
 /* PORTIFOLIO */
 
 #Portifolio {
-    background-color:  #a9a9a9;
+    background-color:  white;
     text-align: center;
     padding: 50px;
 }
 .Card {
     margin-top: 25px;
-    width: 338px;
-    height: 400px;
+    width: 300px;
+    height: 430px;
     background-color: #e8e8e8;
     border: 1px solid #a1a1a1;
     border-radius: 35px;
     text-align: center;
+    box-shadow: 1px 1px 3px #000000;
 }
 
 .Card img {
-    height: 235px;
-    width: 338px;
+    height: 250px;
+    width: 300px;
     border-radius: 35px 35px 0px 0px;
 }
 
