--- a/style.css
+++ b/style.css
@@ -139,9 +139,9 @@ main h2 {
 
 #Sobre {
     background-image: url(img/background.png);
-    background-color: #444444;
+    background-color: #000000;
     background-size: cover;
-    background-position: center;
+    background-position: right -100px bottom -150px;
     background-repeat: no-repeat;
     padding: 30px 0px;
     text-align: center;
@@ -152,7 +152,7 @@ main h2 {
     text-shadow: 1px 1px 3px black;
 }
 .textoSobre {
-    background-color: rgba(51, 51, 51, 0.7);
+    background-color: rgba(0, 0, 0, 0.7);
     border-radius: 35px;
     box-shadow: 1px 1px 3px #000000;
     text-shadow: 1px 1px 3px #000000;
