--- a/style.css
+++ b/style.css
@@ -76,10 +76,10 @@ body {
 header {
     justify-content: space-between;
     background-color: #000000;
-    height: 60px;
+    height: 90px;
 }
 #logo img {
-    margin-top: 10px;
+    margin-top: -10px;
     margin-left: 10px;
     width: 100px;
     height: 100px;
@@ -95,31 +95,45 @@ label {
     right: 15px;
     color: rgba(255, 255, 255, 0.5);
 }
+nav {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    background-color: transparent;
+}
 nav ul {
+    display: flex;
     list-style: none;
-    background-color: #343538;
-    height: 100vh;
-    position: fixed;
-    top: 60px;
-    right: -100%;
-    width: 100px;
-    transition: all 0.5s;
+    margin: 0;
+    padding: 10px;
+    margin-top: -80px;
+        /* position: fixed;
+        height: 100vh;
+        top: 60px;
+        right: -100%;
+        width: 100px;
+        transition: all 0.5s; */
+}
+
+nav a {
+    text-decoration: none;
+    color: white;
+    margin: 5px;
+    transition: color 0.3s;
 }
 #check:checked ~ul {
     right: 0;
 }
 nav ul li {
-    padding: 20px;
-    border-bottom: 1px solid #a9a9a9;
-}
-nav ul li a {
     text-decoration: none;
-    color: white;
+    padding: 10px;
+
 }
 /* Destaque */
 main {
-    height: 75vh;
+    height: 65vh;
     background: url(img/fundo.jpg);
+    background-position-y: -300px;
     background-attachment: fixed;
     background-size: cover;
     color: white;
@@ -176,10 +190,11 @@ main h2 {
     padding: 50px;
 }
 .Card {
+    color: white;
     margin-top: 25px;
     width: 300px;
     height: 430px;
-    background-color: #e8e8e8;
+    background-color: #000000;
     border: 1px solid #a1a1a1;
     border-radius: 35px;
     text-align: center;
@@ -194,7 +209,7 @@ main h2 {
 
 .Card p {
     text-align: center;
-    color: #343538;
+    color: #ffffff;
     padding: 10px 30px 50px 30px;
 }
 
@@ -249,6 +264,12 @@ main h2 {
     display: flex;
     padding: 5px;
     flex-direction: row;
+    justify-content: center;
+}
+.Flexzin {
+    display: flex;
+    padding: 10px;
+    flex-direction: column;
     justify-content: center;
 }
 /* FOOTER */
@@ -370,14 +391,65 @@ footer {
     header {
         height: 120px;
     }
+    .FlexMenu {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+    label {
+        display: none;
+    }
+    nav ul.desktop-menu {
+        list-style:none;
+        display: flex;
+        justify-content: center;
+        position: static;
+        height: auto;
+        background-color: transparent;
+    }
+    nav ul.desktop-menu li {
+        margin-right: 0 20px;
+    }
+    nav ul.desktop-menu li:last-child {
+        margin-right: 0;
+    }
+    nav ul.desktop-menu li a {
+        text-decoration: none;
+        color: white;
+        transition: color 0.3s;
+    }
+    nav ul li a:hover {
+        color: red;
+    }
     #logo img {
         width: 200px;
         height: 200px;
     }
+     /* Sobre nós */
+     #Sobre {
+    background-image: url(img/iconwhite2.png);
+    background-color: #000000;
+    background-size: 80vh;
+    background-position: right -30px bottom -300px;
+    background-repeat: no-repeat;
+    padding: 30px 0px;
+    text-align: center;
+    justify-content: center;
+}
      /* Destaque */
      main {
         margin-top: -50px;
-        height: 60vh;
+        height: 75vh;
+    }
+    .h1 {
+        position: static;
+        height: 140px;
+        width: 390px;
+    }
+    .h2{
+        position: static;
+        height: 100px;
+        width: 390px;
     }
     /* CONTATOS */
     .textoContato {
